Minor alignment fix

--- a/index.css
+++ b/index.css
@@ -626,7 +626,7 @@ footer { width: 100%; }
 	background:#444444 url("./img/return-off.png") no-repeat scroll left 10px center / 50px auto;
 	height:35px;
 	color: #FFFFFF;
-	padding:10px 0 10px 60px;
+	padding:10px 0px 10px 60px;
 	font-size:30px;
 	font-weight:bold;
 	margin:7px 5px;
